--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.1.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0",
+    "react-datepicker": "^4.3.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.18.0",
     "react-router-dom": "^5.3.0",
